# c-render

./: .gitignore  CMakeLists.txt  COPYING  README.md  TODO.txt  cmake_debug_profile.sh  flake.nix  parse_file.py
src/: CMakeLists.txt  annotations.h  app_main.c
src/filesystem/: CMakeLists.txt  buffered_reader.c  buffered_reader.h  content_loader.c  content_loader.h  sprite_file.c  sprite_file.h
src/graphics/: CMakeLists.txt  graphic.c  graphic.h  sprite.c  sprite.h
src/graphics/user_interface/: CMakeLists.txt  composite.c  composite.h  label.c  label.h  menubar.c  menubar.h  statuslabel.c  statuslabel.h  ui_utils.h  window.c  window.h
src/render_pipeline/: CMakeLists.txt  char_render.c  char_render.h
src/render_pipeline/user_interface/: CMakeLists.txt  composite.c  composite.h  menubar.c  menubar.h  ui_utils.c  ui_utils.h  window.c  window.h
src/tui/: CMakeLists.txt  tui.c
src/types/: CMakeLists.txt  vector.c  vector.h
src/utils/: CMakeLists.txt  keyboard.c  keyboard.h  sprite_edit.c  sprite_edit.h  stringutils.c  stringutils.h  vector.h
src/utils/pd_demo/: CMakeLists.txt  rain_demo.c  tuidemo.c
